# HelmRig

./: .env.example  .gitignore  Dockerfile  Makefile  README.md
agents/: .gitignore  CONTEXT.md  README.md  design.md  harness.py  pyproject.toml
agents/.githooks/: pre-commit
agents/.github/workflows/: ci.yml
agents/.overlord/: config.yaml  cron_journal.py  overlord.plist  overlord.py  overlord.service
agents/agentkit/: __init__.py  alert.py  api.py  api_gateway.py  crawler.py  file_reader.py  knowledge.py  mcp.py  memory.py  parallel.py  slack_bot.py  sub_agent.py  tracer.py  utils.py  webhook.py
agents/dashboard/: app.py
agents/dashboard/templates/: agent.html  dashboard.html
agents/graphify-out/: .gitignore  GRAPH_REPORT.md  graph.html  graph.json
agents/graphify-out/2026-07-22/: GRAPH_REPORT.md  graph.json
agents/morgonbriefing/: agent.yaml  main.py  requirements.txt
agents/nyheter/: agent.yaml  main.py  requirements.txt
agents/restaurang/: agent.yaml  main.py  requirements.txt
agents/tests/: test_cron_journal.py  test_harness.py  test_overlord.py  test_utils.py
agents/vader/: agent.yaml  main.py
agents/veckorapport/: agent.yaml  main.py  requirements.txt
docs/superpowers/plans/: 2026-07-20-agent-factory-enhancements.md  2026-07-20-overlord-control-center.md
docs/superpowers/specs/: 2026-07-20-agent-factory-enhancements-design.md  2026-07-20-overlord-control-center-design.md
