[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "helmrig"
version = "0.1.0"
description = "CLI, runtime och övervakning för LangGraph-baserade AI-agenter"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "flask>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
crawler = ["crawl4ai>=0.4.0"]
memory = ["chromadb>=1.0.0"]
mcp = ["mcp>=1.0.0"]
tracer = ["langfuse>=2.0.0"]
file = ["PyMuPDF>=1.25.0", "python-docx>=1.1.0"]
all = [
    "crawl4ai>=0.4.0",
    "chromadb>=1.0.0",
    "mcp>=1.0.0",
    "langfuse>=2.0.0",
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
